--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
   "pydantic>=2.12.4,<3.0.0",
   "pytest>=8.4.2,<9.0.0",
   "python-dotenv>=1.2.1,<2.0.0",
-  "aioredis>=2.0.0,<3.0.0"
+  "aioredis>=2.0.0,<3.0.0",
+  "pydantic-settings>=2.11.0",
 ]
 
 [tool.pytest.ini_options]
